test/lit/pto/async_put_invalid_non_1d.pto
// RUN: not ptoas %s 2>&1 | FileCheck %s

module {
  func.func @bad_async_put(%dst: memref<4x32xf32, #pto.address_space<gm>>,
                           %src: memref<4x32xf32, #pto.address_space<gm>>,
                           %workspace: memref<1024xi8, #pto.address_space<gm>>) {
    %scratch = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=i8, rows=1, cols=256, v_row=1, v_col=256, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %session = pto.build_async_session(%scratch, %workspace : !pto.tile_buf<loc=vec, dtype=i8, rows=1, cols=256, v_row=1, v_col=256, blayout=row_major, slayout=none_box, fractal=512, pad=0>, memref<1024xi8, #pto.address_space<gm>>) -> !pto.async_session
    %event = pto.tput_async(%dst, %src, %session : memref<4x32xf32, #pto.address_space<gm>>, memref<4x32xf32, #pto.address_space<gm>>, !pto.async_session) -> !pto.async_event
    return
  }
}

// CHECK: error: 'pto.tput_async' op expects dst to be a static flat contiguous logical 1D GM memref
